--- a/ProjetoFirebase/app/src/main/res/drawable/background.xml
+++ b/ProjetoFirebase/app/src/main/res/drawable/background.xml
@@ -4,7 +4,7 @@
     <gradient
         android:startColor="@color/pink"
         android:centerColor="@color/pink_light"
-        android:endColor="@color/orange"
+        android:endColor="@color/white"
         android:angle="90"/>
 
 </shape>
